Added a section of some text and a card form and styled them with CSS as well as some utility functions

--- a/index.html
+++ b/index.html
@@ -22,5 +22,35 @@
             </nav>
         </div>
     </div>
+
+    <!--Showcase for Items in Index-->
+    <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>A Learning Center</h1>
+                <p>A citadel for discovering talents, nurturing them to delvelop into full and potential laurels. Fill out the form if you will want to know more.</p>
+                <a href="features.html" class="btn btn-outline">Read More</a>
+            </div>
+
+            <div class="showcase-form card">
+                <h2>Request a Demo</h2>
+                <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+
+                    <div class="form-control">
+                        <input type="text" name="company" placeholder="Company Name" required>
+                    </div>
+
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
