--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/utilities.css">
     <title>Unique Star | Learning Center</title>
 </head>
 <body>
@@ -49,6 +50,35 @@
 
                     <input type="submit" value="Send" class="btn btn-primary">
                 </form>
+            </div>
+        </div>
+    </section>
+
+    <!--Stats Aread-->
+    <section class="stats">
+        <div class="container">
+            <h3 class="stats-heading text-center my-1">
+                Welcome to the best school focused on delivering 
+                well curated academic lessons through excellent tutors.
+            </h3>
+
+            <div class="grid grid-3 text-center my-4">
+                <div>
+                    <i class="fas fa-server fa-3x"></i>
+                    <h3>10,349,405</h3>
+                    <p class="text-secondary">Current Students</p>
+                </div>
+
+                <div>
+                    <i class="fas fa-book fa-3x"></i>
+                    <h3>943 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,343,242</h3>
+                    <p class="text-secondary">Projects</p>
+                </div>
             </div>
         </div>
     </section>
