--- a/docs.html
+++ b/docs.html
@@ -45,32 +45,58 @@
         <div class="card bg-light p-3">
           <h3 class="my-2">Essentials</h3>
           <nav>
-              <ul>
-                  <li><a href="#">Introduction</a></li>
-                  <li><a href="#">About Unique Star</a></li>
-                  <li><a href="#">Contacting Us</a></li>
-              </ul>
+            <ul>
+              <li><a class="text-primary" href="#">Introduction</a></li>
+              <li><a href="#">About Unique Star</a></li>
+              <li><a href="#">Contacting Us</a></li>
+            </ul>
           </nav>
 
           <h3 class="my-2">Deployment</h3>
           <nav>
-              <ul>
-                  <li><a href="#">Setting up a container</a></li>
-                  <li><a href="#">Using the CLI</a></li>
-                  <li><a href="#">Managing Resources</a></li>
-                  <li><a href="#">Upgrade & Downgrade</a></li>
-              </ul>
+            <ul>
+              <li><a href="#">Setting up a container</a></li>
+              <li><a href="#">Using the CLI</a></li>
+              <li><a href="#">Managing Resources</a></li>
+              <li><a href="#">Upgrade & Downgrade</a></li>
+            </ul>
           </nav>
         </div>
 
         <!--Second Column-->
         <div class="card">
-            <h2>Introduction</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias cupiditate sit. Nobis, odio omnis rem aliquam laborum nulla deserunt.</p>
-            
-            <div class="alert alert-success">
-                <i class="fas fa-info"></i>
-            </div>
+          <h2>Introduction</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias
+            cupiditate sit. Nobis, odio omnis rem aliquam laborum nulla
+            deserunt.
+          </p>
+
+          <div class="alert alert-success">
+            <i class="fas fa-info"></i>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam,
+            culpa!
+          </div>
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam autem fugiat nostrum modi iste dolore nemo numquam qui illum distinctio.</p>
+          <a href="" class="btn btn-primary">Install CLI</a>
+
+
+          <h3>Requirements</h3>
+          <ul>
+              <li>Windows 10, Mac OSX, Linux</li>
+              <li>Node.js v12 or Higher</li>
+          </ul>
+
+          <h3>Install</h3>
+          <p>Mac (Homebrew)</p>
+          <pre><code>$ brew install loruki-cli</code></pre>
+
+          <p>NPM</p>
+          <pre><code>$ npm install loruki-cli</code></pre>
+
+          <p>Yarn</p>
+          <pre><code>$ yarn install loruki-cli</code></pre>
         </div>
       </div>
     </section>
